# cv0522

./: .gitignore  README.md  pyproject.toml
artifacts/manifests/: Art.csv  Clipart.csv  Product.csv  Real_World.csv  class_to_id.json  summary.json
configs/: vitb_officehome.yaml
officehome_dg/: __init__.py  analysis.py  config.py  constants.py  data.py  distributed.py  download_weights.py  evaluate.py  make_bundle.py  make_results_bundle.py  methods.py  models.py  prepare_data.py  train.py
requirements/: common.txt  cuda.txt  dev.txt
scripts/: analyze_results.sh  download_weights.sh  make_bundle.sh  make_results_bundle.sh  prepare_data.sh  run_mps_art_erm.sh  train_cuda_8x3090.sh  train_cuda_grid.sh
tests/: __init__.py  helpers.py  test_data.py  test_methods.py  test_train_smoke.py
