[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "officehome-dg"
version = "0.1.0"
description = "Office-Home domain generalization training pipeline."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["officehome_dg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
